--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -28,8 +28,13 @@
               Account
             </button>
           <ul class="dropdown-menu">
-            <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
-        
+            
+            <% if Person.find_by(id: session[:tutor_id]).admin? %>
+              <li class = "dropdown-item"><%= link_to "Profile", adminPage_path %></li>
+            <% else %>
+              <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
+            <% end %>
+            
             <li class="divider"></li>
             <li>
               <%= link_to "Log out", '#', method: :delete %>
