--- a/app/views/people/adminPage.html.erb
+++ b/app/views/people/adminPage.html.erb
@@ -56,7 +56,10 @@
           <div><p></p></div>
           
           <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %> <!--Edit:'(@oerson)' is redundant after edit_person_path because the edit method in people_controller defines @person -->
-
+          <div>
+             <%= link_to "Admin actions", people_path(@person), {:style=>"color:#fff;"} %>
+          </div>
+         
           <!--<button class="btn btn-warning" id="edit_profile">-->
           <div>
             <h5 id="downloadExcel">
