--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,12 +1,22 @@
-@font-face {
-  font-family: Oswald-Regular;
-  src: url('../fonts/Oswald-Regular.ttf'); 
-}
+// @font-face {
+//   font-family: Oswald-Regular;
+//   src: url('../fonts/Oswald-Regular.ttf'); 
+// }
 
-@font-face {
-  font-family: Oswald-Medium;
-  src: url('../fonts/Oswald-Medium.ttf'); 
-}
+// @font-face {
+//   font-family: Oswald-Medium;
+//   src: url('../fonts/Oswald-Medium.ttf'); 
+// }
+
+// @font-face {
+//   font-family: SixCaps;
+//   src: url('../fonts/SixCaps.ttf'); 
+// }
+
+// @font-face {
+//   font-family: Krub;
+//   src: url('../fonts/Krub-Regular.ttf'); 
+// }
 
 button:focus{
 	outline: 0;
@@ -634,9 +644,7 @@ ul.tutors li img{
 	background-image: url("https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
 	background-size: cover;
 }
-#VisualTable{
-	color: white;
-}
-#VisualSubjects{
-	color: white;
+#VisualSubjects tr th{
+	font-weight: normal;
+	font-family: "Arimo";
 }
