--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -74,8 +74,8 @@
             </script> 
           <table style="width:180%" id="VisualTable">
             <tr>
-              <th>My subjects</th>
-              <th>Date</th> 
+              <th style="width:44.6%">My subjects</th>
+              <th style="width:28.2%">Date</th> 
               <th>Rate</th>
             </tr>
             
