--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Find a Tutor") %>
+<% provide(:title, "Search results") %>
 <!DOCTYPE html>
 <html>
 <head>
@@ -41,16 +41,22 @@
 			
  	</div>
  	
- 	<div>
-    <div  class="col-md-6 col-md-offset-3" id="findatutorcontainer">
- 	    <%= form_tag(findatutor_path, method: :get) do %>
- 	       <h4 class="findatutor_heading">Subject  </h4>
- 	       <%= text_field_tag(:searchName, params[:searchName]) %>
- 	       <h4 class="findatutor_heading">Date </h4>
- 	       <%= text_field_tag(:searchDate, params[:searchDate]) %><br>
- 	      <%= submit_tag ("Search")%>
- 	    <% end %>
- 	  </div>
- 	</div>
-</body>
-</html>
+ 	<div><p></p></div>
+ 	    <h3 id="findatutor_headingavailabletutors">Available tutors for <%= params[:searchName] %></h3> 
+ 	    <% if @subjuctivos.nil? %>
+ 	      <%= render 'shared/error_messages_search' %>
+ 	    <% else %>
+   	    <% @subjuctivos.each do |subjuctivo| %>
+   	        <ul>
+   	            <li>
+   	                <% if Person.find_by(id: subjuctivo.creatorid).nil? %>
+   	                <% else %>
+   	                <%= link_to Person.find_by(id: subjuctivo.creatorid).name %>
+   	                <p><%= subjuctivo.date %>   --   <%= subjuctivo.rate %></p>
+   	                <% end %>
+   	            </li> 
+   	        </ul>
+   	    <% end %>
+   	  <% end %>
+   </body>
+   </html>
