fixed some stuff

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -679,5 +679,6 @@ ul.tutors li img{
 	padding: 5px;
 }
 #findatutor_headingavailabletutors{
-	font-family: Cabin;
+	font-family: Lato;
+	margin-left: 20px;
 }
