--- a/app/views/subject/findatutor.html.erb
+++ b/app/views/subject/findatutor.html.erb
@@ -45,7 +45,16 @@
     <div  class="col-md-6 col-md-offset-3" id="findatutorcontainer">
  	    <%= form_tag(findatutor_path, method: :get) do %>
  	       <h4 class="findatutor_heading">Subject  </h4>
- 	       <%= text_field_tag(:searchName, params[:searchName]) %>
+ 	      
+ 	       <div class="form-control">
+   	       <%= select_tag :searchName, options_for_select(['English 9','English 9 Advanced','English 10','English 10 Honors','American Literature','English Literature','ELD Level 1-2','ELD Level 3','ELD Level 4','ELD Level 5','Lit for Success',
+   	       'Human Geography','World History','US History','American Government','Economics','Sociology','Psychology','Integrated Math I','Integrated Math II','Integrated Math II Accelerated','Integrated Math III',
+   	       'Integrated Math III Accelerated','Trigonometry/Statistics','Math Analysis','Math Analysis Honors','Linear Algebra Honors','Intervention Math','Int Math II Concepts','Math Thinking','Biology','Medical Biology',
+   	       'Earth Space Science','Chemistry','Physics','Kinesiology','Physiology','Physiology Honors','Sports Medicine','Health','French 1-2','French 3-4','French 5-6','German 1-2','German 3-4','German 5-6','German 5-6 Honors',
+   	       'Korean 1-2','Korean 3-4','Korean 5-6','Spanish 1-2','Spanish 3-4','Spanish 5-6','AP English Language','AP English Literature','AP European History','AP US History','AP Economics','AP Government/Politics','AP Psychology',
+   	       'AP Human Geography','AP Calculus AB','AP Calculus BC','AP Statistics','AP Biology','AP Chemistry','AP Physics 1','AP Physics 2','AP Physics C','AP Environmental Science','AP French Language','AP German Language',
+   	       'AP Spanish Language (7-8)','AP Spanish Literature (9-10)'], (params[:searchName])), { include_blank: 'None'}%>
+ 	       </div>
  	       <h4 class="findatutor_heading">Date </h4>
  	       <%= text_field_tag(:searchDate, params[:searchDate]) %><br>
  	      <%= submit_tag ("Search")%>
