--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -51,7 +51,7 @@
    	            <li>
    	                <% if Person.find_by(id: subjuctivo.creatorid).nil? %>
    	                <% else %>
-   	                <%= link_to Person.find_by(id: subjuctivo.creatorid).name, selectedTutor_path(params[Person.find_by(id: subjuctivo.creatorid).name])%>
+   	                <%= link_to Person.find_by(id: subjuctivo.creatorid).name, selectedTutor_path(helpthevariables: Person.find_by(id: subjuctivo.creatorid).email) %>
    	                <p><%= subjuctivo.date %>  &nbsp; &nbsp; Rate:  <%= subjuctivo.rate %></p>
    	                <% end %>
    	            </li> 
