--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -88,10 +88,12 @@
 		<!--  I'm a Student-->
 				<!--<button id="button" class="button-responsive"> Find a Tutor</button>	-->
 		<!--</a>-->
-		<a href="/tutorsignup" id="animatedbutton">
-		  I'm a Tutor
-			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
-		</a>
+		<% if !session[:tutor_id] %>
+  		<a href="/tutorsignup" id="animatedbutton">
+  		  I'm a Tutor
+  			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
+  		</a>
+  	<% end %>
 		<a href="/findatutor" id="animatedbutton">
 		  Find a tutor
 			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
