--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -37,7 +37,7 @@
             
             <li class="divider"></li>
             <li>
-              <%= link_to "Log out", '#', method: :delete %>
+              <%= link_to "Log out", logout_path, method: :delete %>
             </li>
           </ul>
       </ul>
