--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -2,6 +2,7 @@
   	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
   	<script src="jquery-3.3.1.min.js"></script>
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+  	
 </head>
 <body id="not_taken" style="font-family: Signika">
   <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
@@ -88,7 +89,7 @@
                       <th style="width:43.1%", "position:absolute"> <%= i.name %></th>
                       <th style="width:22%", "position:absolute"> <%= i.date %></th> 
                       <th style="width:15%", "position:absolute"> <%= i.rate %></th>
-                      <th><%= link_to " Delete", subjects_path(check: i.id), method: :delete,
+                      <th><%= button_to " Delete", subjectdelete_path(check: i.id), method: :delete,
                                   data: { confirm: "Are you sure?" } %></th>
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
