--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -81,7 +81,7 @@
                 				<!--Adarsh i need you to put the Carrot Percent thing for tutor's grade here  *DONE*(-->
                 			</div>
                 			<div class="tutorname">
-                			<%=	Person.find_by(id: subjuctivo.creatorid).name %>
+                			  <%= link_to Person.find_by(id: subjuctivo.creatorid).name, selectedTutor_path(helpthevariables: Person.find_by(id: subjuctivo.creatorid).email, searchName: params[:searchName], searchDate: params[:searchDate]) %>
                 			</div>
                 			<div class="date">
                 				<%= subjuctivo.date %>
