fixed some stuff

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -713,6 +713,10 @@ ul.tutors li img{
 	/* border: 1px solid black; */
 	background-color: #eee;
 	position: relative;
+	background: #ff00cc;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .tutorgrade{
 	float: left;
@@ -721,7 +725,7 @@ ul.tutors li img{
 	background-color: #eee;
 	font-family: "Red Hat Text";
 	text-align: center;
-	font-size: 150px;
+	font-size: 8vw;
 	background-color: cornflowerblue;
 	padding: 10px;
 }
@@ -733,6 +737,12 @@ ul.tutors li img{
 	text-transform: uppercase;
 	font-weight: 700px;
 	font-size: 1.8229vw;
+}
+.tutorname a{
+	color: black !important;
+}
+.tutorname a:hover{
+	text-decoration: none;
 }
 .date{
 	// font-size: 20px;
