--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -717,18 +717,13 @@ ul.tutors li img{
 	/* border: 1px solid black; */
 	background-color: #eee;
 	position: relative;
-	background: #ff00cc;  /* fallback for old browsers */
-background: -webkit-linear-gradient(left, #333399, #ff00cc);
-background: -moz-linear-gradient(left, #333399, #ff00cc);
-background: -o-linear-gradient(left, #333399, #ff00cc);
-background: linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+	box-shadow: 0px 10px 20px;
 }
 .tutorgrade{
 	float: left;
 	width: 28%;
 	height: 100%;
-	background-color: #eee;
+	background-color: cornflowerblue;
 	font-family: "Red Hat Text";
 	text-align: center;
 	font-size: 8vw;
@@ -757,7 +752,7 @@ background: linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safar
 	right: 6%;
 	bottom: 1.5666vw;
 	font-size: 1vw;
-}
+}	
 .rate{
 	float: left;
 	position: absolute;
@@ -765,4 +760,31 @@ background: linear-gradient(to right, #333399, #ff00cc);  /* Chrome 10-25, Safar
 	bottom: 1.566vw;
 	font-family: "Red Hat Text";
 	font-size: 20px;
+}
+.tutorsendrequest{
+	// border: 1px solid black;
+	height: 100%;
+	position: absolute;
+	left: 100%;
+	width: 15vw;
+	// padding-top: 0px;
+	padding: 10px;
+	transition: 0.2s;
+	transform-origin: 0% 50%;
+	transform: scaleX(0);
+	background: #E0EAFC;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+
+	
+}
+.tutordisplaycard:hover{
+	cursor: pointer;
+}
+.tutordisplaycard:hover .tutorsendrequest{
+	visibility: visible;
+	transition: 0.2s;
+	transform: scaleX(1);
 }
