--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -75,7 +75,7 @@
    	            <% if Person.find_by(id: subjuctivo.creatorid).nil? %>
    	                <% else %>
    	                <!--new thing vikram implemented on 8/26-->
-   	                <div class = "tutordisplaycard">
+   	                <div class = "tutordisplaycard searchresultslargecontainer">
                 			<div class="tutorgrade">
                 				<%= Tutor.find_by(people_id: subjuctivo.creatorid).grade %>
                 				<!--Adarsh i need you to put the Carrot Percent thing for tutor's grade here  *DONE*(-->
@@ -89,14 +89,15 @@
                 			<div class="rate">
                 				Rate: <%= subjuctivo.rate %>
                 			</div>
-          <%= form_tag(request_path(name: Person.find_by(id: subjuctivo.creatorid).name), method: :post) do %>
-          
-          <div><p></p></div>
- 	       <h4 class="findatutor_heading">Send request to tutor: </h4>
- 	       <input type="text" name="email" id="email" placeholder="Enter your email"><br>
- 	        <input type="text" name="student" id="student" placeholder="Your name"><br> <!-- params[:name] is for the tutor's name not the student's name -->
-          <input type="submit" name="commit" value="Send" data-disable-with="Search">
-        <% end %>
+                			<div class="tutorsendrequest">
+              			    <%= form_tag(request_path(name: Person.find_by(id: subjuctivo.creatorid).name), method: :post) do %>
+                          <div><p></p></div>
+                 	       <h4 class="findatutor_heading">Send request to tutor: </h4>
+                 	       <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
+                 	        <input type="text" name="student" id="student" placeholder="Your name" class = "form-control"> <!-- params[:name] is for the tutor's name not the student's name -->
+                          <input type="submit" name="commit" value="Send" data-disable-with="Search" id="specialanimatedbutton">
+                        <% end %>
+                			</div>
                 		</div>
    	                <%= link_to Person.find_by(id: subjuctivo.creatorid).name, selectedTutor_path(helpthevariables: Person.find_by(id: subjuctivo.creatorid).email) %>
    	                <p><%= subjuctivo.date %>  &nbsp; &nbsp; Rate:  <%= subjuctivo.rate %></p>
