--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -70,12 +70,12 @@
         <p></p>
       </div>
       
-      <div class="gravatar_edit", id="center_save_changes">
-        <%= gravatar_for @person %>
-        <a href="http://gravatar.com/emails" target="_blank">
-          <span class="btn btn-warning" id="change_profile_pic">Change Profile Picture</span>
-        </a>
-      </div>
+      <!--<div class="gravatar_edit", id="center_save_changes">-->
+      <!--  %= gravatar_for @person %>-->
+      <!--  <a href="http://gravatar.com/emails" target="_blank">-->
+      <!--    <span class="btn btn-warning" id="change_profile_pic">Change Profile Picture</span>-->
+      <!--  </a>-->
+      <!--</div>-->
     <br>
       <div id="center_save_changes"> <%= f.submit "Save changes", class: "btn btn-primary" %> </div>
      
