Heroku study group bugs

--- a/app/views/study_groups/allgroups.html.erb
+++ b/app/views/study_groups/allgroups.html.erb
@@ -60,7 +60,7 @@
    	            <% if !StudyGroup.find(i).nil? %>
    	                <!--new thing vikram implemented on 8/26-->
    	                <div class = "tutordisplaycard searchresultslargecontainer">
-                			<div class="tutorgrade">
+                			<div class="studygroupcreator">
                 				Host: <%= i.creatorName %>
                 			</div>
                 			<div class="tutorname">
