--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -790,3 +790,14 @@ background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, F
 	transition: 0.2s;
 	transform: scaleX(1);
 }
+.studygroupcreator{
+	float: left;
+	width: 28%;
+	height: 100%;
+	background-color: black;
+	font-family: "Red Hat Text";
+	text-align: center;
+	font-size: 3vw;
+	padding: 10px;
+	color: white;
+}
