--- a/app/views/study_groups/new.html.erb
+++ b/app/views/study_groups/new.html.erb
@@ -77,10 +77,10 @@
 <div class="row">
   
     <div  class="col-md-6 col-md-offset-3">
-    <%= form_for(@study_groups, url: studygroup_path) do |f| %>
+    <%= form_for(@study_groups, url: creategroup_path) do |f| %>
       <%= render 'shared/error_messages_group' %>
         <%= f.label :creatorName, "Your Name" %>
-        <%= f.text_field :creatorName, placeholder: "Joe Falcon",class: 'form-control' %>
+        <%= f.text_field :creatorName, class: 'form-control' %>
         
         <%= f.label :date, "Date" %>
         <%= f.text_field :date, class: 'form-control' %>
