--- a/app/views/subject/findatutor.html.erb
+++ b/app/views/subject/findatutor.html.erb
@@ -148,7 +148,7 @@
  	       </div>
  	       <h4 class="findatutor_heading">Day </h4>
  	      <select name="searchDate" id="searchName">
- 	          <option value=nil>Any day</option>
+ 	          <option value="All">Any day</option>
    	        <option value="Sunday">Sunday</option>
             <option value="Monday">Monday</option>
             <option value="Tuesday">Tuesday</option>
