--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -97,13 +97,14 @@
                      	       <h4 class="findatutor_heading">Send request to tutor: </h4>
                      	       <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
                      	        <input type="text" name="student" id="student" placeholder="Your name"  class = "form-control"><br> 
-                              <input type="submit" name="commit" value="Send" data-disable-with="Search" data-disable-with="Search" id="specialanimatedbutton">
+                              <input type="submit" name="commit" value="Send" data-disable-with="Send" id="specialanimatedbutton">
                             <% end %>
                       </div>
                       <div><p></p></div>
                     </div>
    	             <% end %>
    	  <% end %>
+   	  <br>
    	<% end %>
 </body>
 </html>
