--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Create Subject") %>
+<% provide(:title, "Register a subject") %>
        <!--   % if logged_in? %> -->
 	
 	
@@ -51,7 +51,7 @@
 
 <div class="large_content" id="createsubjectlargecontent">
 		<div class="container">
-			<h1 id="createsubjecth1">Create a Subject</h1>
+			<h1 id="createsubjecth1">Register to tutor a subject</h1>
 		</div>
 </div>
 <!--<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 75% 0% -1%; border-radius:25px;"> Create a subject</h1></div>-->
