--- a/app/views/cvstudents/gohere.html.erb
+++ b/app/views/cvstudents/gohere.html.erb
@@ -3,7 +3,7 @@
   	<script src="jquery-3.3.1.min.js"></script>
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body id="not_taken" style="font-family: Signika">
+<body id="" style="background-color:white;" style="font-family: Signika">
   <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -24,56 +24,38 @@
         <!--<li class="nav-item">-->
         <!--  <li><%= link_to "Tutor", '#' %></li> -->
         <!--</li>-->
-        <div class="dropdown">
+         <div class="dropdown">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Account
             </button>
           <ul class="dropdown-menu">
-            <li class = "dropdown-item"><%= link_to "Profile", adminPage_path %></li>
-            <li class = "dropdown-item"><%= link_to "Settings", edit_person_path(@person) %></li>
+            
+            <% if Person.find_by(id: session[:tutor_id]).admin? %>
+              <li class = "dropdown-item"><%= link_to "Profile", adminPage_path %></li>
+            <% else %>
+              <li class = "dropdown-item"><%= link_to "Profile", person_path(Person.find_by(id: session[:tutor_id])) %></li>
+            <% end %>
+            
             <li class="divider"></li>
-            <li class = "dropdown-item">
+            <li>
               <%= link_to "Log out", logout_path, method: :delete %>
             </li>
           </ul>
       </ul>
+      </nav>
       <a class="navbar-brand" href="/home">CV Enterprises</a>
     </div>
       </ul>
     </div>
   </nav>
-  <% provide(:title, @person.name) %>
-  <div class="row">
-    <aside class="col-md-4">
-      <section class="tutor_info">
-        <h1>
-          <%= gravatar_for @person %>
-          <br></br>
-          <div id="bob">
-          <%= @person.name %>
-          <%= @person.email %>
-            
-          <div><p></p></div>
-          
-          <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %> <!--Edit:'(@oerson)' is redundant after edit_person_path because the edit method in people_controller defines @person -->
-          <div>
-             <%= link_to "Admin actions", people_path(@person), {:style=>"color:#fff;"} %>
-          </div>
-         
-          <!--<button class="btn btn-warning" id="edit_profile">-->
-          <div>
-            <h5 id="downloadExcel">
-              <br>
-                <%= link_to 'Download user list', persons_path(format: :xlsx) %>
-	        </h5>
-          </div>
-          </h1>
-          <br>
-          <a href="/import_from_excel" id="animatedbutton">
-		        Import excel sheet (cv student list)
-	    	  </a>
-        
-      </section>
-    </aside>
-   </div>
-   </body>
+  <% provide(:title, "Import from excel") %>
+
+
+
+<h1>Import From Excel</h1>
+ <%= form_tag import_from_excel_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Import", :class=> "btn"%>
+<% end %>
+
+<!-- CLEAR ALL BUTTON -->
