styled the find a tutor page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -718,6 +718,7 @@ ul.tutors li img{
 	background-color: #eee;
 	position: relative;
 	box-shadow: 0px 10px 20px;
+	margin-top: 40px;
 }
 .tutorgrade{
 	float: left;
