--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -59,14 +59,13 @@
 </nav>
 	<div class="large_content">
 		<div class="container">
-			<h1 id="homeh1">Find a tutor</h1>
+			<h1 id="homeh1">Available tutors for <br><%= params[:searchName] %></h1>
 			<p id="homep"></p>		
 		</div>
 			
  	</div>
  	
  	<div><p></p></div>
- 	    <h3 id="findatutor_headingavailabletutors">Available tutors for <%= params[:searchName] %></h3> 
  	    <% if @subjuctivos.nil? %>
  	      <%= render 'shared/error_messages_search' %>
  	    <% else %>
@@ -75,7 +74,7 @@
    	            <% if Person.find_by(id: subjuctivo.creatorid).nil? %>
    	                <% else %>
    	                <!--new thing vikram implemented on 8/26-->
-   	                <div class = "tutordisplaycard searchresultslargecontainer">
+   	                <div class = "tutordisplaycard">
                 			<div class="tutorgrade">
                 				<%= Tutor.find_by(people_id: subjuctivo.creatorid).grade %>
                 				<!--Adarsh i need you to put the Carrot Percent thing for tutor's grade here  *DONE*(-->
@@ -99,8 +98,6 @@
                         <% end %>
                 			</div>
                 		</div>
-   	                <%= link_to Person.find_by(id: subjuctivo.creatorid).name, selectedTutor_path(helpthevariables: Person.find_by(id: subjuctivo.creatorid).email) %>
-   	                <p><%= subjuctivo.date %>  &nbsp; &nbsp; Rate:  <%= subjuctivo.rate %></p>
    	                <% end %>
    	        
    	    <% end %>
