--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,11 @@
 
-<% if @person.errors.any? %>
+<% if @tutor_person.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      The form contains <%= pluralize(@person.errors.count, "error") %>.
+      The form contains <%= pluralize(@tutor_person.errors.count, "error") %>.
     </div>
     <ul>
-    <% @person.errors.full_messages.each do |msg| %>
+    <% @tutor_person.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
