--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -89,7 +89,7 @@
                       <th style="width:43.1%", "position:absolute"> <%= i.name %></th>
                       <th style="width:22%", "position:absolute"> <%= i.date %></th> 
                       <th style="width:15%", "position:absolute"> <%= i.rate %></th>
-                      <th><%= link_to " Delete", subjectdelete_path(check: i.id), method: :delete,
+                      <th><%= link_to " Delete", subjectdelete_path(check: i.id), method: :destroy,
                                   data: { confirm: "Are you sure?" } %></th>
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
