Fixed bug with subject date

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -656,9 +656,11 @@ ul.tutors li img{
 }
 #VisualTable{
 	color: white;
+	background-color:rgba(0,0,0,.5);
 }
 #VisualSubjects{
 	color: white;
+	background-color:rgba(255,255,255,.1);
 }
 #downloadExcel{
 	position: absolute;
