--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -813,9 +813,25 @@ ul.tutors li img{
 background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-
+.tutorsendrequest h4{
+	margin-top: -1vw;
+}
+.tutorsendrequest input{
+	height: 2vw !important;
+	margin-top: 0 !important;
+	margin-bottom: -1vw !important;
+	padding: 20px;
+	font-size: 1vw;
+}
 .tutorsendrequest #specialanimatedbutton{
 	float: right;
+	width: 12vw;
+	height: 5vw;
+	position: absolute;
+	left: 50%;
+	bottom: 10%;
+	transform: translateX(-50%);
+	padding: 0.1vw;
 }
 
 .tutordisplaycard:hover{
