--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -86,10 +86,10 @@
                  
                   <table style="width:180%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
-                      <th style="width:43.1%", "position:absolute"> <%= i.name %></th>
+                      <th style="width:43%", "position:absolute"> <%= i.name %></th>
                       <th style="width:22%", "position:absolute"> <%= i.date %></th> 
                       <th style="width:15%", "position:absolute"> <%= i.rate %></th>
-                      <th><%= link_to " Delete", subjectdelete_path(check: i.id), method: :delete,
+                      <th style="width: 24%"><%= link_to " Delete", subjectdelete_path(check: i.id), method: :delete,
                                   data: { confirm: "Are you sure?" } %></th>
                     </tr>
                     <%# session[:selected_subject_id] = i.id %>
